Handle edge cases and possible errors